# rs-poker

./: .envrc.example  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  ARCH.md  Cargo.toml  EXPERIMENTS.md  README.md  TODO.md  flake.nix  rust-toolchain  rustc-ice-2025-10-07T17_02_37-44396.txt  rustc-ice-2025-10-07T17_02_37-44397.txt  rustc-ice-2025-10-07T17_02_44-44425.txt  rustc-ice-2025-10-07T17_02_47-44439.txt  rustc-ice-2025-10-07T17_02_51-44450.txt  rustc-ice-2025-10-07T17_02_56-44472.txt  rustc-ice-2025-10-07T17_02_58-44486.txt  rustc-ice-2025-10-07T17_03_00-44488.txt  rustc-ice-2025-10-07T17_03_04-44511.txt  rustc-ice-2025-10-07T17_03_10-44547.txt  rustc-ice-2025-10-07T17_04_08-44812.txt
.cargo/: config.toml
.github/workflows/: lint.yml  main.yml  prod_compile.yml
benches/: arena.rs  deal_deck.rs  game.rs  holdem_starting_hand.rs  icm_sim.rs  iter.rs  monte_carlo_game.rs  parse.rs  rank.rs
data/games/ai-vs-random-tournament-1/: game_0-3rrplm.json  game_1-ghebtx.json  game_2-h5wmn2.json  game_3-htooi5.json  game_4-fijzt6.json
data/games/ai-vs-random-tournament-10/: game_0-sg6jda.json  game_1-at496r.json  game_2-zpw93u.json  game_3-tzapfn.json  game_4-rose1u.json  game_5-89bngu.json
data/games/ai-vs-random-tournament-11/: game_0-9yhqhq.json  game_1-86kfop.json  game_2-mbvej0.json  game_3-xp9tt6.json  game_4-uavvns.json  game_5-hdbfc4.json
data/games/ai-vs-random-tournament-12/: game_0-ewy5wa.json  game_1-ezojte.json  game_2-n0w8me.json  game_3-br2uwg.json  game_4-cwgvp5.json  game_5-f0c83p.json  game_6-0y7bzj.json
data/games/ai-vs-random-tournament-13/: game_0-0ufef5.json  game_1-hl1v85.json  game_2-2qt4cp.json  game_3-i2alg9.json  game_4-vq8mb4.json  game_5-dk8i7u.json  game_6-2hpqne.json
data/games/ai-vs-random-tournament-14/: game_0-4fubh1.json  game_1-u4qrbr.json  game_2-2nmdwc.json  game_3-exvif1.json  game_4-u90091.json  game_5-rc6p0s.json  game_6-1mi6u6.json  game_7-c1k1nz.json
data/games/ai-vs-random-tournament-15/: game_0-jwnafo.json  game_1-d3dlrs.json  game_2-zyh05d.json
data/games/ai-vs-random-tournament-16/: game_0-aj4ga8.json  game_1-jk3jgw.json  game_2-l5bb29.json  game_3-nw5mxf.json  game_4-7m4mob.json  game_5-73a7ow.json  game_6-5wy1bl.json  game_7-ll2nwh.json  game_8-0fawqb.json  game_9-l3y955.json
data/tournaments/: ai-vs-random-tournament-1.json  ai-vs-random-tournament-10.json  ai-vs-random-tournament-11.json  ai-vs-random-tournament-12.json  ai-vs-random-tournament-13.json  ai-vs-random-tournament-14.json  ai-vs-random-tournament-15.json  ai-vs-random-tournament-16.json  ai-vs-random-tournament-17.json  ai-vs-random-tournament-18.json  ai-vs-random-tournament-19.json  ai-vs-random-tournament-2.json  ai-vs-random-tournament-20.json  ai-vs-random-tournament-21.json  ai-vs-random-tournament-22.json  ai-vs-random-tournament-23.json  ai-vs-random-tournament-24.json  ai-vs-random-tournament-25.json  ai-vs-random-tournament-26.json  ai-vs-random-tournament-27.json  ai-vs-random-tournament-28.json  ai-vs-random-tournament-29.json  ai-vs-random-tournament-3.json  ai-vs-random-tournament-30.json  ai-vs-random-tournament-31.json  ai-vs-random-tournament-32.json  ai-vs-random-tournament-33.json  ai-vs-random-tournament-34.json  ai-vs-random-tournament-35.json  ai-vs-random-tournament-36.json  ai-vs-random-tournament-37.json  ai-vs-random-tournament-38.json  ai-vs-random-tournament-39.json  ai-vs-random-tournament-4.json  ai-vs-random-tournament-40.json  ai-vs-random-tournament-41.json  ai-vs-random-tournament-42.json  ai-vs-random-tournament-43.json  ai-vs-random-tournament-44.json  ai-vs-random-tournament-45.json  (+65 more)
docs/: REPLAY_SYSTEM.md  SERVER.md  TOURNAMENT_REPLAY.md
examples/: agent_battle.rs  agent_tournament.rs  cfr_export_demo.rs  cfr_hand_demo.rs  game_simulate.rs  replay_demo.rs  simple_replay_test.rs  tournament_replay_demo.rs
examples/exports/: cfr_tree
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzzer_script_1.rs  fuzzer_script_2.rs  multi_replay_agent.rs  rank_seven.rs  replay_agent.rs
fuzz/fuzzers/: fuzzer_script_1.rs  fuzzer_script_2.rs  rank_seven.rs
rs-poker/: Cargo.toml
rs-poker-cli/: Cargo.toml
rs-poker-cli/src/: ai_battle.rs  ai_player.rs  cli.rs  frame.rs  lib.rs  run_game.rs  series_runner.rs
rs-poker-engine/: Cargo.toml
rs-poker-engine/src/: game_instance.rs  game_simulation.rs  game_summary.rs  lib.rs  poker_engine.rs  summary.rs  tournament_instance.rs  tournament_summary.rs
rs-poker-llm-client/: Cargo.toml  gemini_client.rs  llm_client.rs  run_llm.rs
rs-poker-server/: Cargo.toml
rs-poker-server/examples/: game_info_stream_demo.rs  health_check_demo.rs
rs-poker-server/src/: api_types.rs  error.rs  lib.rs  persistence.rs  poker_client.rs  poker_server.rs
rs-poker-server/src/handler/: game_full_view.rs  game_info.rs  game_info_stream.rs  game_list.rs  game_make_action.rs  game_new.rs  game_player_view.rs  health_check.rs  mod.rs  new_tournament.rs  tournament_full_view.rs  tournament_info.rs  tournament_list.rs  tournament_new.rs  tournament_player_view.rs
rs-poker-tower/: Cargo.toml
rs-poker-tower/src/: ai_player.rs  lib.rs  logger.rs  main.rs  tower.rs  worker.rs
rs-poker-types/: Cargo.toml
rs-poker-types/src/: event.rs  game.rs  game_event.rs  lib.rs  player.rs  series.rs  tournament.rs  tournament_event.rs
rs-poker/benches/: icm_sim.rs
rs-poker/examples/: cfr_export_demo.rs  game_simulate.rs  replay_demo.rs  simple_replay_test.rs  tournament_replay_demo.rs
src/: card.rs  card_iter.rs  deck.rs  hand.rs  lib.rs  rank.rs
src/arena/: action.rs  agent.rs  errors.rs  game_state.rs  mod.rs  random_nl_agent.rs  replay_game.rs  replay_tournament.rs  sim_builder.rs  simulation.rs  test_util.rs  tournament.rs
src/core/: card.rs  card_bit_set.rs  card_iter.rs  deck.rs  error.rs  flat_deck.rs  flat_hand.rs  hand.rs  mod.rs  player_bit_set.rs  rank.rs
src/holdem/: game.rs  mod.rs  monte_carlo_game.rs  parse.rs  starting_hand.rs
src/open_hand_history/: hand_history.rs  serde_utils.rs
src/simulated_icm/: mod.rs
src/utils/: mod.rs  player_bit_set.rs
(+852 files in other folders)
