[package]
name = "rs_poker"
version = "3.0.0-beta.28"
authors = ["Elliott Clark <eclark@apache.org>"]
keywords = ["cards", "poker"]
categories = ["games"]
homepage = "https://docs.rs/rs_poker"
repository = "https://github.com/elliottneilclark/rs-poker"
description = "A library to help with any Rust code dealing with poker. This includes card values, suits, hands, hand ranks, 5 card hand strength calculation, 7 card hand strength calulcation, and monte carlo game simulation helpers."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[dependencies]
rand = "~0.8.5"
thiserror = "2.0.9"
serde = { version = "1.0.217", optional = true, features = ["derive"] }
serde_json = { version = "1.0.135", optional = true }
arbitrary = { version = "~1.4.1", optional = true, features = ["derive"] }
tracing = { version = "~0.1.41", optional = true}
approx = { version = "~0.5.1", optional = true}
uuid  = {version = "~1.11.0", optional = true, features = ["v7"]}

[dev-dependencies]
criterion = "0.5.1"
test-log = { version = "0.2.16", features = ["trace", "log"] }
tracing-subscriber = {version = "0.3.19", default-features = true, features = ["env-filter", "fmt"]}
env_logger = {version = "0.11.6"}
approx = { version = "0.5.1"}


[features]
default = ["arena", "serde"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
arena = ["dep:tracing", "uuid"]
arena-test-util = ["arena", "dep:approx"]

[[bench]]
name = "arena"
harness = false
required-features = ["arena"]

[[bench]]
name = "monte_carlo_game"
harness = false

[[bench]]
name = "holdem_starting_hand"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "rank"
harness = false

[[bench]]
name = "icm_sim"
harness = false

[profile.release]
debug = true
lto = true
