[package]
name = "rs_poker"
version = "4.0.0"
authors = ["Elliott Clark <eclark@apache.org>"]
keywords = ["cards", "poker"]
categories = ["games"]
homepage = "https://docs.rs/rs_poker"
repository = "https://github.com/elliottneilclark/rs-poker"
description = "A library to help with any Rust code dealing with poker. This includes card values, suits, hands, hand ranks, 5 card hand strength calculation, 7 card hand strength calulcation, and monte carlo game simulation helpers."
readme = "README.md"
license = "Apache-2.0"
edition = "2024"

[dependencies]
rand = "~0.9.1"
thiserror = "~2.0.12"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "~1.0.140", optional = true }
arbitrary = { version = "~1.4.1", optional = true, features = ["derive"] }
tracing = { version = "~0.1.41", optional = true }
approx = { version = "~0.5.1", optional = true }
little-sorry = { version = "~1.1.0", optional = true, features = [] }
ndarray = { version = "~0.16.1", optional = true }
chrono = { version = "~0.4.41", optional = true, features = ["serde"] }

[dev-dependencies]
criterion = "~0.6.0"
test-log = { version = "~0.2.17", features = ["trace", "log"] }
tracing-subscriber = { version = "~0.3.19", default-features = true, features = [
    "env-filter",
    "fmt",
] }
env_logger = { version = "~0.11.8" }
approx = { version = "~0.5.1" }
tempfile = "~3.20.0"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = {version = "~0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[features]
default = ["arena", "serde"]
serde = ["dep:serde", "dep:serde_json"]
arena = ["dep:tracing", "dep:little-sorry", "dep:ndarray"]
arena-test-util = ["arena", "dep:approx"]
open-hand-history = ["serde", "dep:chrono"]

[[bench]]
name = "arena"
harness = false
required-features = ["arena"]

[[bench]]
name = "monte_carlo_game"
harness = false

[[bench]]
name = "holdem_starting_hand"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "rank"
harness = false

[[bench]]
name = "icm_sim"
harness = false

[[bench]]
name = "deal_deck"
harness = false

[profile.release]
debug = true
lto = true
