[package]
name = "rs-poker-types"
version = "0.1.0"
edition = "2024"

[dependencies]
rs_poker = { path = "../rs-poker" }
rs-poker-llm-client = { path = "../rs-poker-llm-client" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
schemars = "0.8"